--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A gift from Vince</title>
+    <link rel="stylesheet" href="./css/index-style.css">
 </head>
 <body>
-    <h1>Hi Mel, I'm Vince</h1>
-    <p>Thank you for visiting my website. If you are not Crash, you are not welcome. (jk... or am I?)</p>
-    <p>Here's a little gift for you anyway you bubba:</p>
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHh6dnU4c2dqbTBwY3AxdDFzaXU5MGVkMGc4Znl0ZzV3enF1dGM3MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l4pTdcifPZLpDjL1e/giphy.webp" alt="All my love for you gif">
-    <p>Much love to ya!</p>
+    <div class="title-bar">
+        <h1>Hi Mel, IT SHOULDN'T BE A FLASHBANG NOW</h1>
+    </div>
+    <div class="greeting">
+        <p>Thank you for visiting my website. If you are not Crash, you are not welcome. (jk... or am I?)</p>
+        <p>Here's a little gift for you anyway you bubba:</p>
+        <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHh6dnU4c2dqbTBwY3AxdDFzaXU5MGVkMGc4Znl0ZzV3enF1dGM3MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l4pTdcifPZLpDjL1e/giphy.webp" alt="All my love for you gif">
+        <p>Much love to ya!</p>
+    </div>
 </body>
 </html>
