--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A gift from Vince</title>
-    <link rel="stylesheet" href="./css/index-style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/index-style.css" />
+  </head>
+  <body>
     <div class="title-bar">
-        <h1>Hi Mel, IT SHOULDN'T BE A FLASHBANG NOW</h1>
+      <h1>Hi Mel, IT SHOULDN'T BE A FLASHBANG NOW</h1>
     </div>
     <div class="greeting">
-        <p>Thank you for visiting my website. If you are not Crash, you are not welcome. (jk... or am I?)</p>
-        <p>Here's a little gift for you anyway you bubba:</p>
-        <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHh6dnU4c2dqbTBwY3AxdDFzaXU5MGVkMGc4Znl0ZzV3enF1dGM3MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l4pTdcifPZLpDjL1e/giphy.webp" alt="All my love for you gif">
-        <p>Much love to ya!</p>
+      <p>
+        Thank you for visiting my website. If you are not Crash, you are not
+        welcome. (jk... or am I?)
+      </p>
+      <p>Here's a little gift for you anyway you bubba:</p>
+      <img
+        src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHh6dnU4c2dqbTBwY3AxdDFzaXU5MGVkMGc4Znl0ZzV3enF1dGM3MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/l4pTdcifPZLpDjL1e/giphy.webp"
+        alt="All my love for you gif"
+      />
+      <br />
+      <audio controls autoplay>
+        <source
+          src="./audio/spongebob-squarepants-closing-theme-song-made-with-Voicemod.mp3"
+          type="audio/mp3"
+        />
+      </audio>
+      <p>Much love to ya!</p>
     </div>
-</body>
+  </body>
 </html>
