--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
         alt="All my love for you gif"
       />
       <br />
-      <audio controls autoplay>
+      <audio autoplay>
         <source
           src="./audio/spongebob-squarepants-closing-theme-song-made-with-Voicemod.mp3"
           type="audio/mp3"
